tests/netedit/demandelements/stop/basic/invalid_type/output.netedit
TestFunctions: Netedit opened successfully
Finding reference
TestFunctions: 'reference.png' found. Position: 303 - 167
dummyType
TestFunctions: Clicked over position 549 - 422
stopLane
TestFunctions: Clicked over position 549 - 422
TestFunctions: Clicked over position 303 - 167
TestFunctions: Clicked over position 303 - 167
TestFunctions: Clicked over position 303 - 167
TestFunctions: Netedit closed successfully
